--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@libsql/client": "^0.7.0",
+    "@nrwl/express": "^19.3.2",
+    "@prisma/client": "^5.16.1",
+    "axios": "^1.6.0",
+    "better-sqlite3": "^11.1.1",
+    "express": "^4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tslib": "^2.3.0"
@@ -13,12 +19,17 @@
     "@nx/cypress": "19.3.2",
     "@nx/eslint": "19.3.2",
     "@nx/eslint-plugin": "19.3.2",
+    "@nx/express": "19.3.2",
     "@nx/jest": "19.3.2",
     "@nx/js": "19.3.2",
+    "@nx/node": "19.3.2",
     "@nx/react": "19.3.2",
     "@nx/vite": "19.3.2",
     "@nx/web": "19.3.2",
+    "@nx/webpack": "19.3.2",
     "@nx/workspace": "19.3.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -35,6 +46,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^13.8.0",
+    "drizzle-kit": "^0.22.8",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -44,15 +56,19 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "19.3.2",
+    "nx": "^19.3.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "prisma": "^5.16.1",
+    "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
