--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@libsql/client": "^0.7.0",
     "@nrwl/express": "^19.3.2",
     "@prisma/client": "^5.16.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.6.0",
     "better-sqlite3": "^11.1.1",
     "express": "^4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.24.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
