--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "@sky-style/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "generate:migrations": "drizzle-kit generate",
+    "apply:migrations": "drizzle-kit sync"
+  },
   "private": true,
   "dependencies": {
     "@libsql/client": "^0.7.0",
     "@nrwl/express": "^19.3.2",
-    "@prisma/client": "^5.16.1",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.6.0",
-    "better-sqlite3": "^11.1.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.3.0",
+    "drizzle-orm": "^0.33.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.24.1",
@@ -37,8 +44,12 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "18.16.9",
+    "@types/pg": "^8.11.8",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
@@ -48,7 +59,7 @@
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^13.8.0",
-    "drizzle-kit": "^0.22.8",
+    "drizzle-kit": "^0.24.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
