--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.3.0",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
@@ -46,6 +47,7 @@
     "@testing-library/react": "15.0.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "18.16.9",
